--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 9px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 5px;
+  margin-bottom: 6px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 6px;
+  padding: 10px 5px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px;
 }
