--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+}
+
+.information {
+  display: flex;
+  flex-direction: row;
+}
+
+figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +36,8 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.text {
+  text-align: center;
 }
