--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -2,7 +2,7 @@
 
 body {
   height: 100vh;
-  margin: 0;
+  margin: 0px;
   overflow: hidden;
   font-family: Roboto, sans-serif;
 }
@@ -23,4 +23,58 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  background-color: rgb(224, 224, 224);
+  position: absolute;
+    width: 100%;
+    bottom: 0%;
+}
+
+.left-links {
+  display: flex;
+  justify-content: space-between;
+  width: 100px;
+}
+
+.footer .left-links {
+  width: 175px;
+}
+
+.right-links {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 30px;
+  width: 125px;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: rgb(75, 75, 75);
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 79%;
+}
+
+.input {
+  margin-bottom: 9px;
 }
